# simple-im

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: PRD-v0.2.md  PRD.md  TECH-SPEC.md  openapi.yaml
skills/governor/: SKILL.md
skills/participant/: .gitignore  SKILL.md  listen.sh
src/: delivery.rs  error.rs  http.rs  lib.rs  main.rs  persistence.rs  presence.rs  registry.rs  rooms.rs  trust.rs  types.rs
target-test/: .rustc_info.json
target-test/debug/.fingerprint/allocator-api2-ca0ba057e1ced942/: lib-allocator_api2  lib-allocator_api2.json
target-test/debug/.fingerprint/atoi-5f4b59f71f68f5d2/: lib-atoi  lib-atoi.json
target-test/debug/.fingerprint/atomic-waker-01d5582e1cdf5f52/: lib-atomic_waker  lib-atomic_waker.json
target-test/debug/.fingerprint/autocfg-18aa57da510982e1/: lib-autocfg  lib-autocfg.json
target-test/debug/.fingerprint/axum-macros-6b4ad580c9a4148b/: lib-axum_macros  lib-axum_macros.json
target-test/debug/.fingerprint/base64-884cdcdb973dc756/: lib-base64  lib-base64.json
target-test/debug/.fingerprint/base64-8b4e5c96d4eca542/: lib-base64  lib-base64.json
target-test/debug/.fingerprint/bitflags-8d8bc590bd750a32/: lib-bitflags  lib-bitflags.json
target-test/debug/.fingerprint/block-buffer-2cf93e53f432e51d/: lib-block_buffer  lib-block_buffer.json
target-test/debug/.fingerprint/bytes-065e2cc42a419605/: lib-bytes  lib-bytes.json
target-test/debug/.fingerprint/cc-f243dea087a8cbd0/: lib-cc  lib-cc.json
tests/: acceptance.rs
(+310 files in other folders)
