[package]
name = "simple-im"
version = "1.1.2"
edition = "2024"
description = "Self-hosted agent-to-agent messaging hub: name registry + online 1:1 delivery + optional elected-governor trust layer. See docs/TECH-SPEC.md."
license = "MIT"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures = "0.3"

[profile.release]
# Ultra-light artifact: strip + LTO + size-opt.
strip = true
lto = true
opt-level = "z"
codegen-units = 1
# NOTE: `panic = "abort"` intentionally removed. A panicking request must NOT take
# down the whole hub (it would drop every SSE stream and wipe all in-flight queues).
# With unwind, tokio isolates a panic to its own task/request (that request 500s) and
# the hub keeps serving. Combined with the panic-logging hook in main.rs, we both SEE
# the panic (one greppable line) AND survive it. Reliability > a few KB of binary size.
